--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.28.0
-tensorflow==2.15.0
-numpy==1.24.3
-librosa==0.10.1
-scikit-learn==1.3.2
-soundfile==0.12.1
+streamlit
+librosa
+tensorflow
+numpy
+pandas
+matplotlib
