--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-tensorflow==2.15.0
-librosa
-numpy
-pandas
-soundfile
-scipy
+streamlit==1.31.1
+numpy==1.23.5
+pandas==1.5.3
+librosa==0.10.1
+soundfile==0.12.1
+tensorflow==2.12.0
+scipy==1.10.1
